syntax = "proto3";

package resources.centrum;

import "buf/validate/validate.proto";
import "resources/centrum/attributes.proto";
import "resources/centrum/settings.proto";
import "resources/centrum/units.proto";
import "resources/jobs/colleagues.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/centrum;centrum";

message Dispatch {
  uint64 id = 1 [(tagger.tags) = "sql:\"primary_key\" alias:\"id\""];
  optional resources.timestamp.Timestamp created_at = 2;
  optional resources.timestamp.Timestamp updated_at = 3;
  string job = 4 [
    deprecated = true,
    (buf.validate.field).string.max_len = 20
  ];
  resources.centrum.JobList jobs = 18;
  optional DispatchStatus status = 5;
  // @sanitize
  string message = 7 [(buf.validate.field).string.max_len = 255];
  // @sanitize
  optional string description = 8 [(buf.validate.field).string.max_len = 1024];
  optional DispatchAttributes attributes = 9;
  double x = 10;
  double y = 11;
  // @sanitize
  optional string postal = 12 [(buf.validate.field).string.max_len = 48];
  bool anon = 13;
  optional int32 creator_id = 14 [(buf.validate.field).int32.gt = 0];
  optional resources.users.User creator = 15;
  repeated DispatchAssignment units = 16;
  optional DispatchReferences references = 17;
}

message DispatchAssignments {
  uint64 dispatch_id = 1;
  string job = 2 [(buf.validate.field).string.max_len = 20];
  repeated DispatchAssignment units = 3;
}

message DispatchAssignment {
  uint64 dispatch_id = 1 [(tagger.tags) = "sql:\"primary_key\" alias:\"dispatch_id\""];
  uint64 unit_id = 2 [(tagger.tags) = "sql:\"primary_key\" alias:\"unit_id\""];
  optional resources.centrum.Unit unit = 3;
  optional resources.timestamp.Timestamp created_at = 4;
  optional resources.timestamp.Timestamp expires_at = 5;
}

enum StatusDispatch {
  STATUS_DISPATCH_UNSPECIFIED = 0;
  STATUS_DISPATCH_NEW = 1;
  STATUS_DISPATCH_UNASSIGNED = 2;
  STATUS_DISPATCH_UPDATED = 3;
  STATUS_DISPATCH_UNIT_ASSIGNED = 4;
  STATUS_DISPATCH_UNIT_UNASSIGNED = 5;
  STATUS_DISPATCH_UNIT_ACCEPTED = 6;
  STATUS_DISPATCH_UNIT_DECLINED = 7;
  STATUS_DISPATCH_EN_ROUTE = 8;
  STATUS_DISPATCH_ON_SCENE = 9;
  STATUS_DISPATCH_NEED_ASSISTANCE = 10;
  STATUS_DISPATCH_COMPLETED = 11;
  STATUS_DISPATCH_CANCELLED = 12;
  STATUS_DISPATCH_ARCHIVED = 13;
  STATUS_DISPATCH_DELETED = 14;
}

message DispatchStatus {
  uint64 id = 1 [(tagger.tags) = "sql:\"primary_key\" alias:\"id\""];
  optional resources.timestamp.Timestamp created_at = 2;
  uint64 dispatch_id = 3;
  optional uint64 unit_id = 4;
  optional resources.centrum.Unit unit = 5;
  StatusDispatch status = 6 [(buf.validate.field).enum.defined_only = true];
  // @sanitize
  optional string reason = 7 [(buf.validate.field).string.max_len = 255];
  // @sanitize
  optional string code = 8 [(buf.validate.field).string.max_len = 20];
  optional int32 user_id = 9 [(buf.validate.field).int32.gt = 0];
  optional resources.jobs.Colleague user = 10;
  optional double x = 11;
  optional double y = 12;
  // @sanitize
  optional string postal = 13 [(buf.validate.field).string.max_len = 48];
  optional string creator_job = 14 [(buf.validate.field).string.max_len = 20];
}

enum TakeDispatchResp {
  TAKE_DISPATCH_RESP_UNSPECIFIED = 0;
  TAKE_DISPATCH_RESP_TIMEOUT = 1;
  TAKE_DISPATCH_RESP_ACCEPTED = 2;
  TAKE_DISPATCH_RESP_DECLINED = 3;
}

// @dbscanner: json
message DispatchReferences {
  repeated DispatchReference references = 1;
}

message DispatchReference {
  uint64 target_dispatch_id = 1;
  DispatchReferenceType reference_type = 2 [(buf.validate.field).enum.defined_only = true];
}

enum DispatchReferenceType {
  DISPATCH_REFERENCE_TYPE_UNSPECIFIED = 0;
  DISPATCH_REFERENCE_TYPE_REFERENCED = 1;
  DISPATCH_REFERENCE_TYPE_DUPLICATED_BY = 2;
  DISPATCH_REFERENCE_TYPE_DUPLICATE_OF = 3;
}
